Fix missing line break in code

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -85,6 +85,7 @@ textarea {
 }
 pre {
     white-space: pre-wrap;
+    word-break: break-word;
     color: white;
 }
 .gutter pre {
